Fix about features icon alignment op mobiel

--- a/css/style.css
+++ b/css/style.css
@@ -756,6 +756,8 @@ h4 { font-size: 1.125rem; }
     font-size: 1.5rem;
     color: var(--color-secondary);
     flex-shrink: 0;
+    width: 32px;
+    text-align: center;
 }
 
 .feature h4 {
